--- a/index.Rmd
+++ b/index.Rmd
@@ -11,5 +11,71 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## Presentacion 
-Este documento presenta graficos generador a partir de los datos Covid-19 en Costa Rica compartidos por el Ministerio de Salud en https://geovision.uned.ac.cr/oges/
+Este documento presenta graficos generador a partir de los datos Covid-19 en Costa Rica compartidos por el Ministerio de Salud en [https://geovision.uned.ac.cr/oges/](https://geovision.uned.ac.cr/oges/)
+
+
+
+## Entradas 
+```{r carga-datos}
+covid <- read.csv(file = "05_10_22_CSV_GENERAL.csv", sep = ";")
+```
+
+## Procesamiento 
+### Curacion de Datos 
+```{r conversion fecha}
+covid$FECHA <- as.Date(covid$FECHA, format = "%d/%m/%Y") 
+```
+
+### Opciones generales 
+```{r opciones generales}
+options(scipen = 7)
+```
+
+
+## Salidas 
+
+### Graficos
+
+#### Casos Acumulados 
+
+##### Positivos 
+
+```{r}
+plot(covid$FECHA, covid$positivos, main = "Casos acumulados positivos de Covid-19 en Costa Rica", xlab = "Fecha", ylab = "Casos")
+```
+
+plot(
+  covid$FECHA,
+  covid$positivos,
+  type = "l",
+  xaxt = "n",
+  yaxt = "n",
+  main = "Casos positivos acumulados de COVID en Costa Rica",
+  xlab = "Fecha",
+  ylab = "Casos positivos"
+)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
