--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,13 @@ title: Análisis de datos de COVID-19 en Costa Rica mediante funciones del paque
   base R - Basico
 author: "Daniela Castro"
 date: '2022-05-11'
-output: html_document
+output: 
+  html_document:
+    toc: true
+    toc_depth: 5
+    toc_float:
+      collapsed: false
+      smooth_scroll: false
 ---
 
 ```{r setup, include=FALSE}
@@ -40,10 +46,13 @@ options(scipen = 7)
 
 ##### Positivos 
 
+###### Casos
 ```{r}
 plot(covid$FECHA, covid$positivos, main = "Casos acumulados positivos de Covid-19 en Costa Rica", xlab = "Fecha", ylab = "Casos")
 ```
 
+##### Casos Positivos Acumulados 
+```{r casos-positivos-acumulados}
 plot(
   covid$FECHA,
   covid$positivos,
@@ -54,26 +63,97 @@ plot(
   xlab = "Fecha",
   ylab = "Casos positivos"
 )
+# Formato del eje x
+axis(side = 1,
+     covid$FECHA,
+     tick = FALSE,
+     format(covid$FECHA, "%m-%y"),
+     cex.axis = .7)
+# Formato del eje Y
+axis(
+  side = 2,
+  covid$positivos,
+  labels = TRUE,  
+  at = seq(0, 1000000, by = 200000),
+  cex.axis = .7
+)
+```
 
+##### Fallecidos
 
+```{r fallecidos-acumulados}
+# Gráfico de líneas
+plot(
+  covid$FECHA,
+  covid$fallecidos,
+  type = "l",
+  xaxt = "n",
+  yaxt = "n",
+  main = "Casos fallecidos acumulados de COVID en Costa Rica",
+  xlab = "Fecha",
+  ylab = "Casos fallecidos"
+)
+# Formato del eje X
+axis(side = 1,
+     covid$FECHA,
+     tick = FALSE,
+     format(covid$FECHA, "%m-%y"),
+     cex.axis = .7)
+# Formato del eje Y
+axis(
+  side = 2,
+  covid$fallecidos,
+  labels = TRUE,  
+  at = seq(0, 10000, by = 2000),
+  cex.axis = .7
+)
+```
 
+##### Otros
+En este gráfico se muestran los casos acumulados positivos, activos, recuperados y fallecidos.
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+```{r positivos-activos-recuperados-fallecidos-acumulados}
+# Gráfico de líneas de casos activos
+plot(
+  covid$FECHA,
+  covid$positivos,
+  type = "l",
+  xaxt = "n",
+  yaxt = "n",
+  main = "Casos acumulados de COVID en Costa Rica",
+  xlab = "Fecha",
+  ylab = "Casos",
+  col = "blue"
+)
+# Casos activos
+lines(covid$FECHA, covid$activos, col="red")
+# Casos recuperados
+lines(covid$FECHA, covid$RECUPERADOS, col="green")
+# Casos fallecidos
+lines(covid$FECHA, covid$fallecidos, col="black")
+# Leyenda
+legend(
+  x = "topleft",
+  inset = 0.03,
+  legend = c("Positivos", "Activos", "Recuperados", "Fallecidos"),
+  col = c("blue", "red", "green", "black"),
+  lty = 1,
+  cex = 0.7)
+# Formato del eje X
+axis(side = 1,
+     covid$FECHA,
+     tick = FALSE,
+     format(covid$FECHA, "%m-%y"),
+     cex.axis = .7)
+# Formato del eje Y
+axis(
+  side = 2,
+  covid$positivos,
+  labels = TRUE,  
+  at = seq(0, 1000000, by = 200000),
+  cex.axis = .7
+)
+```
 
 
 
